--- a/Descriptive_analysis.ipynb
+++ b/Descriptive_analysis.ipynb
@@ -19,7 +19,9 @@
     "   - cleaned_restaurants.csv: Contains all the restaurants in Yelp's dataset but with attributes extracted into  columns in order to prepare it for the deep learning model.\n",
     "   - reviews_bahnmi.csv\n",
     "   - reviews_rest_phoenix_metropolis.csv\n",
-    "   - reviews_rest_toronto.csv"
+    "   - reviews_rest_toronto.csv\n",
+    "   - Business-metropolis.csv\n",
+    "   - user_phoenix.csv"
    ]
   },
   {
